--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Skills</title>
+        <style>
+            table, th, td {border: 1px solid black} 
+        </style>
     </head>
     <body>
         <table>
@@ -64,7 +67,7 @@
             </tr>
             <tr>
                 <td>Online</td>
-                <td>Search Engine Optimization (SE0)</td>
+                <td>Search Engine Optimization (SEO)</td>
                 <td>Basic</td>
             </tr>
             <tr>
