--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -23,7 +23,7 @@
             <select id="subject" name="subject">
                 <option value="job">Job Opportunity</option>
                 <option value="knowyou">Getting to know you</option>
-                <option value="other">Other</option><br>
+                <option value="other">Other</option>
             </select><br>
 
             <label for="message">Message</label><br>
