--- a/lecturenotes/week4forms.html
+++ b/lecturenotes/week4forms.html
@@ -10,7 +10,7 @@
         <form action="" method="post">
             <!-- label tells user what to enter 
             for links the label to the form element 
-            value in for must match value in input id-->
+            value in form must match value in input id-->
             <label for="fullname">Full Name</label><br>
             <input type="text" id="fullname" name="fullname"><br>
 
