--- a/lab07/index.html
+++ b/lab07/index.html
@@ -11,9 +11,9 @@
             <a href="contact.html">Contact</a> |
             <a href="skills.html">Skills</a>
         </nav>
-        
+
         <h1>Dianna Higaki's Biography</h1>
-        <img src="../images/website-pic.png" alt="Dianna Higaki"></a><br>
+        <img src="../images/website-pic.png" alt="Dianna Higaki"><br>
         <p>
             Hello! My name is Dianna Higaki, and I am a junior at S.I. Newhouse School of Public Communications at Syracuse University. <br>I am an <strong>advertising major with a creative emphasis</strong> leaning towards the art director path. <br>I am passionate about art, design, and graphics and aspire to use this creativity in my future profession.
         </p>
