--- a/lab08/index.html
+++ b/lab08/index.html
@@ -49,7 +49,7 @@
     <footer>
     <hr>
     &copy;2022
-    <p class="quote">“Life is like a box of chocolates, you never know what you're going to get.” - Forrest Gump </p>
+    <p class="quote">“Life is like a box of chocolates, you never know what you're going to get.” - Forrest Gump </>
     </footer>
 
     </body>
