--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -8,7 +8,7 @@
             body {font-family: Helvetica, sans-serif;}
             .centeredtext {text-align: center;}
            .centeredtext, p, .flexbox2, .flexbox1 {margin: 20px;}
-            img {width: 30%; height: 0 auto;}
+            img {width: 30%; height: auto;}
 
             .flexbox2 {display:flex;
                 justify-content: space-between;
@@ -168,7 +168,7 @@
                 <td>Code</td>
                 <td>HTML</td>
                 <td>Basic</td>
-            </tr> -->
-        </table>
+            </tr
+        </table>> -->
     </body>
 </html>
