--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -2,16 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewpoint" content ="width-device-width, initial-scale=1.0">
         <title>Skills</title>
         <link rel="stylesheet" href="styles.css">
         <style>
             body {font-family: Helvetica, sans-serif;}
-            .centeredtext {text-align: center;}
-           .centeredtext, p, .flexbox2, .flexbox1 {margin: 20px;}
+            .centeredtext {text-align: center; margin: 20px;}
+            p {margin: 20px;}
             img {width: 30%; height: auto;}
 
             .flexbox2 {display:flex;
                 justify-content: space-between;
+                margin: 20px;
             }
 
             .flexbox1 {display:flex;
@@ -31,8 +33,8 @@
 
     <body>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="contact.html">Contact</a> |
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="contact.html">Contact</a> <span>|</span>
             <a href="skills.html">Skills</a>
         </nav>
         
