--- a/lab10/index.html
+++ b/lab10/index.html
@@ -50,7 +50,7 @@
     <footer>
     <hr>
     &copy;2022
-    <p class="quote">“Life is like a box of chocolates, you never know what you're going to get.” - Forrest Gump </>
+    <p class="quote">“Life is like a box of chocolates, you never know what you're going to get.” - Forrest Gump </p>
     </footer>
 
     </body>
