--- a/project/project05/checkout.html
+++ b/project/project05/checkout.html
@@ -30,30 +30,30 @@
         <input type="text" id="email" name="email"><br>
             <br>
         <label for="shipping">Shipping Address</label><br>
-        <input type="text" id="shippin" name="shipping"><br>
+        <input type="text" id="shipping" name="shipping"><br>
             <br>
         <label for="venmo">Venmo Username</label><br>
         <input type="text" id="venmo" name="venmo"><br>
             <br>
-        <label for="subject">Products</label>
-        <select id="subject" name="subject">
-            <option value="job">Bingsu Buddy</option>
-            <option value="job">Char Char</option>
-            <option value="other">Chicken Tendies</option>
-            <option value="other">Pastry Pat</option>
-            <option value="other">Puff Peri</option>
-            <option value="knowyou">Spammy Sammy</option>
-            <option value="other">Stop AAPI Hate</option>
+        <label for="products">Products</label>
+        <select id="products" name="products">
+            <option value="bingsu">Bingsu Buddy</option>
+            <option value="char">Char Char</option>
+            <option value="tendies">Chicken Tendies</option>
+            <option value="pat">Pastry Pat</option>
+            <option value="peri">Puff Peri</option>
+            <option value="sammy">Spammy Sammy</option>
+            <option value="aapi">Stop AAPI Hate</option>
         </select><br>
             <br>
         <label for="subject">Quantity</label>
         <select id="subject" name="subject">
-            <option value="job">1</option>
-            <option value="job">2</option>
-            <option value="other">3</option>
-            <option value="other">4</option>
-            <option value="other">5</option>
-            <option value="knowyou">5+</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="5+">5+</option>
         </select><br>
         <label for="5+">If more than 5, please indicate how many.</label><br>
         <input type="text" id="5+" name="5+"><br>
@@ -64,16 +64,14 @@
         <input type="submit" value="Place Order">
     </form>
     <h2>FAQs</h2>
-    <p>
-        Shipping<br>
+        <h3>Shipping</h3>
         <ol>
             <li>Where do you ship? Currently, I'm only shipping within the United States</li>
             <li>Can I track my order? Unfortuneately, at the moment I do not provide tracked shipping :(</li>
             <li>When do orders get shipped out & how long does it take to arrive? Orders are shipped within 1-3 days after purchase. Stickers arrive typically within 2-7 days in the US, but may be delayed due to COVID-19. If your order doesn't arrive within 3 weeks (US), please contact me through my Instagram (@madeby.keiko).</li>
         </ol>
-        Return Policy<br>
-        All sales are final, and returns will not be accepted. If you have concerns or damage of your product, please feel free to contact me.
-    </p>
+        <h3>Return Policy</h3>
+        <p>All sales are final, and returns will not be accepted. If you have concerns or damage of your product, please feel free to contact me.</p>
 
     <footer>
         <hr>
