--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewpoint" content ="width-device-width, initial-scale=1.0">
@@ -27,12 +27,13 @@
 
     <body>
         <nav>
+            <a href="#content">Skip to Content</a> <span>|</span>
             <a href="index.html">Home</a> <span>|</span>
             <a href="contact.html">Contact</a> <span>|</span>
             <a href="skills.html">Skills</a>
         </nav>
 
-        <h1>Contact</h1><br>
+        <h1 id="contact">Contact</h1><br>
 
         <div class="part1">
             <div class="address">
