--- a/lab11/index.html
+++ b/lab11/index.html
@@ -2,13 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewpoint" content ="width-device-width, initial-scale=1.0">
         <title>Dianna Higaki-Bio</title>
         <link rel="stylesheet" href="styles.css">
+        <style>
+            
+        </style>
     </head>
     <body>
+        <nav>
+            <a href="#content">Skip to Content</a> <span>|</span>
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="contact.html">Contact</a> <span>|</span>
+            <a href="skills.html">Skills</a>
+        </nav>
+
         <h1>Dianna Higaki's Biography</h1>
-        <img src="../images/website-pic.png" alt="Dianna Higaki"></a><br>
-        <p>
+        <header class="banner"><img src="../images/website-pic.png" alt="Dianna Higaki"></header><br>
+        <main>
+        <p id="paragraph">
             Hello! My name is Dianna Higaki, and I am a junior at S.I. Newhouse School of Public Communications at Syracuse University. <br>I am an <strong>advertising major with a creative emphasis</strong> leaning towards the art director path. <br>I am passionate about art, design, and graphics and aspire to use this creativity in my future profession.
         </p>
         <p>
@@ -34,7 +46,13 @@
     <p>
         Soccer has been a part of my life since I was young, and this drew me to try out for and join the women's club soccer team here at Syracuse. <br>And as far a music goes, I listen to anything and everything from RnB to EDM to Korean Pop. 
     </p>
+    </main>
+
+    <footer>
     <hr>
     &copy;2022
+    <p class="quote">“Life is like a box of chocolates, you never know what you're going to get.” - Forrest Gump </p>
+    </footer>
+
     </body>
 </html>
