--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -33,20 +33,20 @@
             <a href="skills.html">Skills</a>
         </nav>
 
-        <h1 id="contact">Contact</h1><br>
+        <h1 id="content">Contact</h1><br>
 
         <div class="part1">
             <div class="address">
-                    <h3>
+                    <h2>
                         Dianna Higaki<br>
                         319 Euclid Ave.<br>
                         Syracuse, NY 13210<br>
-                    </h3>
+                    </h2>
             </div>
             <div class="linkedin"> 
                     <a href="mailto:dkhigaki@syr.edu">Dianna Higaki Email</a><br>
                     <img src="../images/Linkedin.png" alt="LinkedIn Logo">
-                    <a href="https://www.linkedin.com/in/dianna-higaki/" target="_blank"></a>My LinkedIn Profile
+                    <a href="https://www.linkedin.com/in/dianna-higaki/">My LinkedIn Profile
             </div>
         </div>
         <div class="part2">
