--- a/lab11/index.html
+++ b/lab11/index.html
@@ -18,9 +18,9 @@
         </nav>
 
         <h1>Dianna Higaki's Biography</h1>
-        <header class="banner"><img src="../images/website-pic.png" alt="Dianna Higaki"></header><br>
+        <header class="banner"><img src="../images/website-pic.png" alt="me"></header><br>
         <main>
-        <p id="paragraph">
+        <p id="content">
             Hello! My name is Dianna Higaki, and I am a junior at S.I. Newhouse School of Public Communications at Syracuse University. <br>I am an <strong>advertising major with a creative emphasis</strong> leaning towards the art director path. <br>I am passionate about art, design, and graphics and aspire to use this creativity in my future profession.
         </p>
         <p>
