--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -40,7 +40,7 @@
         </nav>
         
         <h1 class="centeredtext"> Technical Skills</h1>
-        <p id="paragraph">My passion lies in graphics and design where I have gained knowledge through courses and self-taught experiences. My educational background has further exanded my knowledge and taught me skills in marketing, coding, and more. Through real world experience, I have also been able to strengthen my skills in marketing and analytics. Below are my core skills.</p>
+        <p id="content">My passion lies in graphics and design where I have gained knowledge through courses and self-taught experiences. My educational background has further exanded my knowledge and taught me skills in marketing, coding, and more. Through real world experience, I have also been able to strengthen my skills in marketing and analytics. Below are my core skills.</p>
         
         <div class="flexbox2">
             <div class="flexbox1">
