--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -9,7 +9,7 @@
             body {font-family: Helvetica, sans-serif;}
             .centeredtext {text-align: center; margin: 20px;}
             p {margin: 20px;}
-            img {width: 30%; height: auto;}
+            img {max-width: 30%; height: auto;}
 
             .flexbox2 {display:flex;
                 justify-content: space-between;
