--- a/project/project06/about.html
+++ b/project/project06/about.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About The Artist</title>
     <link rel="stylesheet" href="projectstyle.css">
+    <style>
+        .headshot{
+            max-width: 30%;
+        }
+    </style>
 
 </head>
 <body>
@@ -16,14 +21,27 @@
         <a href="checkout.html">Checkout</a>
     </nav>
     <h1>About the Artist</h1>
-    <header class="headshot"><img src="../websitemedia/images/me.png" alt="pictureofartist"></header>
-    <p>Hi hi hello~<br>
-        I'm Dianna (my middle name is Keiko), and I'm a 21-year-old currently located in New York. Thank you so much for checking out and supporting my shop!<br>  
-        I've been drawing and arting since I was a wee child but have found recent inspiration to turn my artwork into physical sticker beings. Many of my designs come from my love for Asian culture, food, and just drawing smiley faces on inanimate objects.<br> 
-        Feel free to stalk me on my socials for more :P<br>
-        Instagram: <a href="https://www.instagram.com/madeby.keiko/" class="Instagramlink">@madeby.keiko</a><br>
-        TikTok: <a href="https://www.tiktok.com/@madebykeiko" class="TikToklink">@madebykeiko</a><br>
-    </p>
+    
+    <div>
+        <div> 
+            <header class="headshot"><img src="../websitemedia/images/me.png" alt="pictureofartist"></header>
+        </div>
+        <div>
+            <h2>Hi hi hello~</h2>
+             I'm Dianna (my middle name is Keiko), and I'm a 21-year-old currently located in New York. Thank you so much for checking out and supporting my shop!<br>  
+             I've been drawing and arting since I was a wee child but have found recent inspiration to turn my artwork into physical sticker beings. Many of my designs come from my love for Asian culture, food, and just drawing smiley faces on inanimate objects.<br> 
+            Feel free to stalk me on my socials for more :P<br>
+        </div>
+    </div>
+    <div>
+        <div>
+            <h3>Contact Me!</h3>
+        </div>
+        <div>
+            Instagram: <a href="https://www.instagram.com/madeby.keiko/" class="Instagramlink">@madeby.keiko</a><br>
+            TikTok: <a href="https://www.tiktok.com/@madebykeiko" class="TikToklink">@madebykeiko</a><br>
+        </div>
+    </div>
     
 
 
