--- a/project/project06/products.html
+++ b/project/project06/products.html
@@ -22,7 +22,7 @@
             border-radius: 1em;
             border: 5px double #98745C
         }
-        
+       
     </style>
 </head>
 <body>
@@ -108,7 +108,17 @@
            </div>
         </div>
         <div class="products4">
-           <div>
+            <div>
+                <h3>Solar Hug</h3>
+                <img src="../websitemedia/images/solar_system.jpg" alt="solarhug">
+                    <h4>$3.25</h4>
+                    <ul>
+                        <li><strong>About Solar Hug:</strong> Everyone likes warm hugs but the Solar System likes the warmest hugs. Cause the sun is pretty hot itself ;)</li>
+                        <li><strong>Sticker Details:</strong> 100 % Waterproof, Weatherproof and Scratch Resistant Vinyl Sticker. Size: 1.5in W x 1.5in H</li>
+                        <li><strong>Design Inspiration:</strong> It can be pretty lonely by yourself but there are people closer to you than you think. Like the solar system, just because you're far away doesn't mean you still can't give eachother a hug :)</li>
+                    </ul> 
+            </div>
+            <div>
                 <h3>Stop AAPI Hate</h3>
                 <img src="../websitemedia/images/mrsushiman.jpg" alt="mrsushiman">
                     <h4>$3.50: 100% of the proceeds for this sticker will go to <a href="https://stopaapihate.org/">Stop Asian Hate</a> and the continued fight against racism.</h4>
