--- a/project/project07/about.html
+++ b/project/project07/about.html
@@ -26,6 +26,7 @@
        }
 
     </style>
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon_package_v0.16/favicon-32x32.png">
 
 </head>
 <body>
